# old_code

./: .gitmodules  README.md  greek-alphabet-test.py  reading_mem.py  search-random-place.py
BMP/: ImageBMP.java  README.md  prueba_en_C.c
CorrectTime/: README.md  argv  correctTimeLineASS  correctTimeLineASS.hs  correctTimeLineSRT.py  correctTimeLineSRT2.py
backlight_old/: bl.sh
email_name_obfuscation/: README.md  email.ascci.txt  email.js  email.sh
game-of-life-in-excel/: conway's_game_of_life.ods  conway's_game_of_life.small.ods  conway's_game_of_life.xlsx
languajes-learning/Agda/: .gitignore  plfa
languajes-learning/C++/: Combinator.cpp  print_template.hh  weird.cpp
languajes-learning/Haskell/: Ejercicios.tar.xz
languajes-learning/SML/: first.sml
languajes-learning/Scala/: coursera-2012.tar.xz
languajes-learning/c++11_14/: declaring_function_types_for_class.cc  test_utf8.cc  util.h
languajes-learning/miniKanren/: README.md  playing.scm
languajes-learning/rust/: lifetime-01.rs  lifetime-02.rs  test.rs
map projection/: README.md  dymaxionMap.hs  mapsProjector.py  source_maps.txt
parsers/really simple parser/: README.md  code.js  parser.html
parsers/simple_calc/: calclex.py  calcparser.py  clean.sh
proglangs-learning/: README.md
proglangs-learning/Agda/: .gitignore  Test.agda
proglangs-learning/C++/: print_template.cc
proglangs-learning/Coq/: agdag.agda  (+4 more)
proglangs-learning/Haskell/tf-haskell-experiments/: tf-haskell-experiments.cabal
proglangs-learning/c++11_14/: CMakeLists.txt  README.md  Y_combinator.cc  applying_tuple_to_function_functional_programming.cc  unique_ptr_to_shared.cc  vector_by_value.cc
proglangs-learning/c++11_14/modern-efective-c++/: infering_types.cc
project euler solutions/: Problem_001.py  Problem_002.hs  Problem_002.py  Problem_003.hs  Problem_003.py  Problem_004.hs  Problem_004.py  Problem_004a.py  Problem_005.py  Problem_006.py  Problem_007.hs  Problem_007.py  Problem_007b.hs  Problem_008.hs  Problem_008.py  Problem_008b.py  Problem_009.py  Problem_010.hs  Problem_011.py  Problem_012.hs  Problem_012.py  Problem_012b.cpp  Problem_013.py  Problem_014.hs  Problem_014.py  Problem_014b.hs  Problem_015.py  Problem_015b.py  Problem_016.py  Problem_017.py  Problem_018.py  Problem_018b.hs  Problem_019.py  Problem_021.py  Problem_022.hs  Problem_022.py  Problem_023.py  Problem_023b-with_Haskell.py  Problem_024.py  Problem_025.py  (+74 more)
quine/: QuineHelq.py  README.md
sia_UNAL_classes_data_extraction/: unal_extractor.rb
tf/: Mnist_tensorflow_example.ipynb
(+147 files in other folders)
