name:                tf-haskell-experiments
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tf-haskell-experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

--library
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010

--executable eg01
--  hs-source-dirs:      app
--  main-is:             eg01.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , tensorflow
--                     , vector
--                     , tensorflow-ops
--                     , tensorflow-core-ops
--  default-language:    Haskell2010

executable eg02
  hs-source-dirs:      app
  main-is:             eg02.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tensorflow
                     , vector
                     , tensorflow-ops
                     , tensorflow-core-ops
                     , cassava
                     , bytestring
                     , random-shuffle
  default-language:    Haskell2010

--test-suite tf-haskell-experiments-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , tf-haskell-experiments
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/githubuser/tf-haskell-experiments
